fix scrollbar

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ button:focus {
 }
 
 body {
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
